--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-	<title>Alien-P Game</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="js/phaser-2.0.1.min.js"></script>
+	<meta charset="utf-8">
+	<title>Testing States</title>
+	<style type="text/css">
+		#gameContainer {
+			width: 800px;
+			margin: 0 auto;
+		}
+	</style>
+	<script src="js/phaser.min.js"></script>
+	<script src="js/Game.js"></script>
+	<script src="js/Boot.js"></script>
+	<script src="js/MainMenu.js"></script>
+	<script src="js/Level1.js"></script>
+	<script src="js/LevelSelect.js"></script>
 </head>
 <body>
 
-	<h2>Alien-P</h2>
-	<div id="game"></div>
+	<div id="gameContainer"></div>
 
-<script src="js/game.js"></script>
 </body>
 </html>
