--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title>Testing States</title>
+	<title>Alien-P</title>
 	<style type="text/css">
 		#gameContainer {
 			width: 800px;
@@ -13,6 +13,7 @@
 	<script src="js/Boot.js"></script>
 	<script src="js/MainMenu.js"></script>
 	<script src="js/Level1.js"></script>
+	<script src="js/Level2.js"></script>
 	<script src="js/LevelSelect.js"></script>
 </head>
 <body>
